[package]
name = "anx7625"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyrlibc = "0.2.1"
embedded-hal = "0.2"
log = { version = "0.4", default-features = false }

[build-dependencies]
cc = "1.0"
bindgen = "*"
cbindgen = "*"
